@startuml 04-code-users
' Generated by C4 Diagram Generator on 2026-01-15
' Agent: C4 Diagram Generator
' System: TravelSplit v1.0.0
' Stack: TypeScript, NestJS v11, TypeORM

title TravelSplit - Code Diagram (Users Module)

skinparam class {
  BackgroundColor<<Controller>> #E1F5FE
  BackgroundColor<<Service>> #F3E5F5
  BackgroundColor<<Entity>> #E8F5E9
  BackgroundColor<<DTO>> #FFF3E0
  BackgroundColor<<Mapper>> #FCE4EC
  BackgroundColor<<Guard>> #E0F2F1
  BackgroundColor<<Base>> #F5F5F5
}

package "Users Module" {
  class UsersController <<Controller>> {
    - usersService: UsersService
    + findAll(): Promise<UserResponseDto[]>
    + findOne(id: string): Promise<UserResponseDto>
    + update(id: string, dto: UpdateUserDto, req: AuthenticatedRequest): Promise<UserResponseDto>
    + remove(id: string): Promise<void>
  }

  class UsersService <<Service>> {
    - userRepository: Repository
    + create(createUserDto: CreateUserDto): Promise<User>
    + findAll(): Promise<User[]>
    + findOne(id: string): Promise<User>
    + findByEmail(email: string): Promise<User | null>
    + update(id: string, updateUserDto: UpdateUserDto): Promise<User>
    + remove(id: string): Promise<void>
  }

  class User <<Entity>> {
    + id: string
    + nombre: string
    + email: string
    + passwordHash: string
    + createdAt: Date
    + updatedAt: Date
    + deletedAt: Date | null
  }

  class CreateUserDto <<DTO>> {
    + nombre: string
    + email: string
    + contrasena: string
  }

  class UpdateUserDto <<DTO>> {
    + nombre?: string
    + email?: string
    + contrasena?: string
  }

  class UserResponseDto <<DTO>> {
    + id: string
    + nombre: string
    + email: string
    + createdAt: Date
  }
}

package "Common" {
  class BaseEntity <<Base>> {
    + id: string
    + createdAt: Date
    + updatedAt: Date
    + deletedAt: Date | null
  }

  class UserMapper <<Mapper>> {
    + {static} toResponseDto(user: User): UserResponseDto
  }

  class JwtAuthGuard <<Guard>> {
    + canActivate(context: ExecutionContext): boolean
  }

  class Repository <<TypeORM>> {
    + find(): Promise<Entity[]>
    + findOne(): Promise<Entity>
    + save(): Promise<Entity>
    + softDelete(): Promise<void>
  }
}

' Relationships
UsersController --> UsersService : uses
UsersController --> UserMapper : uses
UsersController --> JwtAuthGuard : protected by
UsersController --> UserResponseDto : returns
UsersController --> UpdateUserDto : receives

UsersService --> User : manages
UsersService --> CreateUserDto : receives
UsersService --> UpdateUserDto : receives
UsersService --> Repository : uses

User --|> BaseEntity : extends

UserMapper --> User : maps from
UserMapper --> UserResponseDto : maps to

note right of UsersController
  HTTP Layer
  - Handles HTTP requests/responses
  - Validates input using DTOs
  - Delegates business logic to Service
  - Checks authorization (own profile only)
end note

note right of UsersService
  Business Logic Layer
  - Contains all business logic
  - Password hashing with bcrypt
  - Email uniqueness validation
  - Soft delete implementation
end note

note right of User
  Data Model Layer
  - Represents database structure
  - Extends BaseEntity for timestamps
  - Unique constraint on email
end note

@enduml
